--- a/APP/views/partials/menu-left.ejs
+++ b/APP/views/partials/menu-left.ejs
@@ -1,9 +1,9 @@
 <div id="menuSand">
 <i class="fas fa-bars fa-3x"></i> </div>
-<div class="menu-left centraucca slideInLeft">
+<div id="menuCentral" class="menu-left slideInLeft">
         <div id="closeMenu">
-        <i class="fas fa-times fa-2x"></i> </div>
-        <div class="horizontal">
+        <i id="closeMenu" class="fas fa-times fa-2x"></i> </div>
+        <div class="">
             <img class="logo" src="/images/logo.png"/>
             <div class="imagePerfil">
             </div>
