--- a/APP/views/home.ejs
+++ b/APP/views/home.ejs
@@ -27,10 +27,13 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/luccadias/Centraucca/master/centraucca.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>Cats Match</title>
 </head>
 <body>
      <%- include partials/menu-left  %> 
+     <%- include partials/adocao  %> 
      <script src="js/home.js"></script>
 </body>
 </html>
