--- a/APP/views/partials/menu-left.ejs
+++ b/APP/views/partials/menu-left.ejs
@@ -6,6 +6,9 @@
         <div class="">
             <img class="logo" src="/images/logo.png"/>
             <div class="imagePerfil">
+                <div class="hoverPerfil">
+                    <p>Trocar imagem</p>
+                </div>
             </div>
             <div class="textWelcome">   
                 <h1>Bem vindo</h1>
@@ -18,4 +21,9 @@
                 <li id="logout">Sair </li>
             </ul>
         </div>
+        <form id="formData">
+        <input id="imageFile" type="file" name="sampleData" accept="image/x-png,image/gif,image/jpeg"/>
+        <input style="display:none;" id="emailuser" type="email" name="emailuser" />
+
+        </form>
     </div>
