--- a/APP/public/style/homepage.css
+++ b/APP/public/style/homepage.css
@@ -13,15 +13,19 @@
     margin: 1em 0 1em 0;
     width:7em;
 }
+#imageFile{
+    display:none;
+}
 .imagePerfil{
     margin:0 auto;
     width:10em;
     height:10em;
+    cursor:pointer;
     background:rgb(230, 230, 230);
-    border-radius: 100px;
+    border-radius: 50px;
     border: #FF9041 1px solid;
     background-image: url("http://178.62.201.127/sites/default/files/default_images/default-user.png");
-    background-size: 10em 10em;
+    background-size: 10em;
     background-repeat: no-repeat;
 }
 .textWelcome h1{
@@ -33,6 +37,23 @@
     margin:0;
     font-size:1.5em;
     color: #FF7F15;
+}
+.hoverPerfil{
+    background:rgba(0, 0, 0, 0.616);
+    z-index:10;
+    margin:0 auto;
+    margin-top:6.5em;
+    width:10em;
+    height:3.5em;
+    display:none;
+    border-bottom-left-radius: 50px;;
+    border-bottom-right-radius: 50px;;
+    text-align: center;
+}
+.hoverPerfil p{
+    color:white;
+    font-size:0.8em;
+    margin:1.2em;
 }
 .menus{
     margin:0 auto;
@@ -65,12 +86,15 @@
         border-radius:5px;
     }
     #menuSand{
+        position: absolute;
+        z-index: 10;
         display:block;
         float:left;
     }
     .menu-left{
         display:none ;
         width:80%;
+        z-index: 10;
     }
     .fa-times{
         display:block;
@@ -78,6 +102,12 @@
         position:absolute;
         right:-0.3em;
         color:#FF7F15
+    }
+    .row .col.s4{
+        width:50%;
+    }
+    .container-adocao{
+        width: 100% !important;
     }
 }
 
@@ -111,3 +141,13 @@
     transform: translateX(0);
     }
     } 
+
+    .container-adocao{
+        width:80%;
+        height: 100%;
+        overflow-y: scroll;
+        float:right;
+    }
+    .btn-floating{
+        background-color:#FF7F15 !important
+    }
