--- a/APP/views/partials/menu-left.ejs
+++ b/APP/views/partials/menu-left.ejs
@@ -15,9 +15,9 @@
                 <p class="username"></p>
             </div>
             <ul class="menus">
-                <li>Pagina adoção</li>
-                <li>Cadastrar Pet</li>
-                <li>Matchs <span style="font-weight:bold"> </span></li>
+                <a href="/home"><li>Pagina adoção</li></a>
+                <a href="/registerCat"><li>Cadastrar Pet</li></a>
+                <a href="/matchs"><li>Matchs <span style="font-weight:bold"> </span></li></a>
                 <li id="logout">Sair </li>
             </ul>
         </div>
