creating page of cats register

--- a/APP/views/partials/formCat.ejs
+++ b/APP/views/partials/formCat.ejs
@@ -14,8 +14,8 @@
           <label for="last_name">Idade</label>
         </div>
         <div class="input-field col s8">
-          <input placeholder="Placeholder" id="first_name" type="text" class="validate">
-          <label for="first_name">Descrição</label>
+          <input placeholder="Placeholder" id="desc_pet" type="text" class="validate">
+          <label for="desc_pet">Descrição</label>
         </div>
 
       </div>
@@ -29,7 +29,7 @@
           <input class="file-path validate" type="text">
         </div>
 
-        <a style="width:100%;margin-top:1em" class="waves-effect waves-light btn">Cadastrar Gato</a>
+        <a style="width:100%;margin-top:1em" class="waves-effect waves-light btn" id="buttonConfirmarCat">Cadastrar Gato</a>
 
       </div>
       </div>
