--- a/APP/views/partials/adocao.ejs
+++ b/APP/views/partials/adocao.ejs
@@ -1,67 +1,23 @@
 <div class="container-adocao">
    <div class="row">
-
-
-      <div class="col s4">
-         <div class="card">
-            <div class="card-image">
-               <img class="imageClass" src="https://t2.ea.ltmcdn.com/pt/images/2/1/1/como_evitar_que_o_meu_gato_urine_em_casa_20112_600.jpg">
-               <span class="card-title">Floquinho</span>
-               <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons ">thumb_up</i></a>
-            </div>
-            <div class="card-content">
-               <p style="font-weight:bold;">Siamês </p>
-               <p><span  style="font-weight:bold;">Idade: </span> 2 anos</p>
-               <p style="margin-top:10px">Um gato de familia, carinhoso, docel, muito carente e que gosta de comer.</p>
-            </div>
-         </div>
-      </div>
-      
+   <% gatos.forEach((gato) => { %>
 
       <div class="col s4">
          <div class="card">
             <div class="card-image">
-               <img class="imageClass" src="http://img0.br.ndsstatic.com/gato/gatos-munchkin-um-animal-de-raca-que-vai-te-encantar_15884_w620.jpg">
-               <span class="card-title">Charlie</span>
+               <img class="imageClass" src="data:image/png;base64, <%= gato.image %>">
+               <span class="card-title"><%= gato.nome %></span>
                <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons ">thumb_up</i></a>
             </div>
             <div class="card-content">
-               <p style="font-weight:bold;">Munchkin </p>
-               <p><span  style="font-weight:bold;">Idade: </span>2 meses</p>
-               <p style="margin-top:10px">Um gato de familia, carinhoso, docel, muito carente e que gosta de comer.</p>
+               <p style="font-weight:bold;"><%= gato.raca %> </p>
+               <p><span  style="font-weight:bold;">Idade: </span> <%= gato.idade %></p>
+               <p style="margin-top:10px"><%= gato.desc %></p>
             </div>
          </div>
       </div>
-      
-      <div class="col s4">
-      <div class="card">
-         <div class="card-image">
-            <img class="imageClass" src="http://image.cachorrogato.com.br/textimages/gato-siames-raca.jpg">
-            <span class="card-title">Blue</span>
-            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons ">thumb_up</i></a>
-         </div>
-         <div class="card-content">
-            <p style="font-weight:bold;">Siamês </p>
-            <p><span  style="font-weight:bold;">Idade: </span>10 meses</p>
-            <p style="margin-top:10px">Um gato lindo que precisa de dono.</p>
-         </div>
-      </div>
-   </div>
 
-   <div class="col s4">
-      <div class="card">
-         <div class="card-image">
-            <img class="imageClass" src="https://meusanimais.com.br/wp-content/uploads/2015/04/gato-persa-preto.jpg">
-            <span class="card-title">Bart</span>
-            <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons ">thumb_up</i></a>
-         </div>
-         <div class="card-content">
-            <p style="font-weight:bold;">Persa </p>
-            <p><span  style="font-weight:bold;">Idade: </span>1 ano</p>
-            <p style="margin-top:10px">Obeso que só pensa em comer, porém é carinhoso e precisa de uma dona</p>
-         </div>
-      </div>
-   </div>
+      <% })%>
       
    </div>
 </div>
