--- a/APP/public/style/homepage.css
+++ b/APP/public/style/homepage.css
@@ -155,3 +155,13 @@
     a{
         color:rgba(255, 255, 255, 0.63)
     }
+    .pMatch {
+        margin:0.2em 0 0 0;
+        color:rgb(54, 54, 54);
+        font-size:0.9em;
+    }
+    .textoMatch{
+        margin:0;
+        font-size:1.8em;
+        color:#FF7F15
+    }
