--- a/APP/views/matchs.ejs
+++ b/APP/views/matchs.ejs
@@ -24,18 +24,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     <link rel="stylesheet" href="style/conf.css"/>
     <link rel="stylesheet" href="style/homepage.css"/>    
+    <link rel="stylesheet" href="style/messages.css"/> 
     <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/luccadias/Centraucca/master/centraucca.css">
     <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/luccadias/Centraucca/master/centraucca.css">
 
     <title>Cats Match</title>
 </head>
 <body>
      <%- include partials/menu-left  %>
-     <script src="js/home.js"></script>
-
-
+     <%- include partials/messages  %>
      
 </body>
+<script src="js/matchs.js"></script>
 </html>
