--- a/APP/views/partials/adocao.ejs
+++ b/APP/views/partials/adocao.ejs
@@ -7,7 +7,7 @@
             <div class="card-image">
                <img class="imageClass" src="data:image/png;base64, <%= gato.image %>">
                <span class="card-title"><%= gato.nome %></span>
-               <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons ">thumb_up</i></a>
+               <a class="btn-floating halfway-fab waves-effect waves-light red"><i class="material-icons" onclick="likeCat('<%= gato.id %>', '<%= gato.email %>', '<%= gato.nome %>')">thumb_up</i></a>
             </div>
             <div class="card-content">
                <p style="font-weight:bold;"><%= gato.raca %> </p>
